--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-SUPABASE_URL=###
-SUPABASE_KEY=###
-OPENROUTER_API_KEY=###
+# Supabase configuration
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
+
+# OpenRouter configuration
+OPENROUTER_API_KEY=your_openrouter_api_key
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+DEFAULT_MODEL=anthropic/claude-3-opus
