--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ dist/
 
 # generated types
 .astro/
+.env
+.env.prod
 
 # dependencies
 node_modules/
@@ -14,7 +16,7 @@ yarn-error.log*
 pnpm-debug.log*
 
 # environment variables
-.env
+.env.asas
 .env.production
 
 # macOS-specific files
