--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-astro": "0.14.1",
-    "typescript-eslint": "8.28.0"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "8.28.0",
+    "vite": "^5.2.6"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
