--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,13 +17,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'npm'
+          cache: 'yarn'
       
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       
       - name: Run ESLint
-        run: npm run lint
+        run: yarn lint
 
   unit-test:
     name: Unit Tests
@@ -37,13 +37,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'npm'
+          cache: 'yarn'
       
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       
       - name: Run unit tests with coverage
-        run: npm run test:coverage
+        run: yarn test:coverage
       
       - name: Upload coverage results
         uses: actions/upload-artifact@v4
@@ -70,19 +70,19 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'npm'
+          cache: 'yarn'
       
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       
       - name: Install Playwright browsers
         run: npx playwright install chromium
       
       - name: Build the project
-        run: npm run build
+        run: yarn build
       
       - name: Run E2E tests
-        run: npm run test:e2e
+        run: yarn test:e2e
       
       - name: Upload test results
         uses: actions/upload-artifact@v4
