chore: add some tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext",
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
     "resolveJsonModule": true,
     "esModuleInterop": true
   }
