--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,8 +2,8 @@ name: Pull Request Workflow
 
 on:
   pull_request:
-    branches: [ master ]
-    types: [ opened, synchronize, reopened ]
+    branches: [master]
+    types: [opened, synchronize, reopened]
 
 jobs:
   lint:
@@ -12,16 +12,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
-      
+          node-version-file: ".nvmrc"
+          cache: "yarn"
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      
+
       - name: Run ESLint
         run: yarn lint
 
@@ -32,19 +32,19 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
-      
+          node-version-file: ".nvmrc"
+          cache: "yarn"
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      
+
       - name: Run unit tests with coverage
         run: yarn test:coverage
-      
+
       - name: Upload coverage results
         uses: actions/upload-artifact@v4
         with:
@@ -65,25 +65,25 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'yarn'
-      
+          node-version-file: ".nvmrc"
+          cache: "yarn"
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      
+
       - name: Install Playwright browsers
         run: npx playwright install chromium
-      
+
       - name: Build the project
         run: yarn build
-      
+
       - name: Run E2E tests
         run: yarn test:e2e
-      
+
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
@@ -101,7 +101,7 @@ jobs:
         id: check-status
         if: ${{ needs.unit-test.result == 'success' && needs.e2e-test.result == 'success' }}
         run: echo "All tests passed successfully"
-      
+
       - name: Create PR comment
         if: ${{ needs.unit-test.result == 'success' && needs.e2e-test.result == 'success' }}
         uses: actions/github-script@v7
@@ -119,4 +119,4 @@ jobs:
               - E2E Tests: Success ✓
               
               The pull request is ready to be reviewed.`
-            }) 
+            })
