--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Run unit tests with coverage
-        run: yarn test:coverage
+      - name: Run unit tests
+        run: yarn test
 
       - name: Upload coverage results
         uses: actions/upload-artifact@v4
