--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
     "resolveJsonModule": true,
     "esModuleInterop": true
   }
