--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
+    "build:vercel": "astro build --adapter vercel",
+    "build:cloudflare": "astro build --config astro.config.cf.mjs",
     "preview": "astro preview",
     "astro": "astro",
+    "deploy": "astro build && wrangler deploy",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -22,6 +25,7 @@
     "@astrojs/node": "^9.1.3",
     "@astrojs/react": "4.2.2",
     "@astrojs/sitemap": "3.3.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
@@ -43,6 +47,7 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@astrojs/cloudflare": "^12.5.1",
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
     "@playwright/test": "^1.52.0",
@@ -72,7 +77,8 @@
     "typescript": "^5.4.5",
     "typescript-eslint": "8.28.0",
     "vite": "^5.2.6",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.1",
+    "wrangler": "^4.13.2"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
