--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "4.0.17",
     "@types/react": "19.0.12",
@@ -87,5 +88,6 @@
     "*.{json,css,md}": [
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
